work/iptables.save
# Generated by iptables-save v1.4.21 on Wed Dec 30 16:38:52 2020
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [1:52]
:FINAL - [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -j FINAL
-A INPUT -j DROP
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -p tcp -m multiport --sports 22,80 -m state --state ESTABLISHED -j ACCEPT
-A FINAL -d 255.255.255.255/32 -p icmp -j DROP
-A FINAL -d 192.168.10.255/32 -p icmp -j DROP
-A FINAL -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,SYN,RST,PSH,ACK,URG -j DROP
-A FINAL -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG NONE -j DROP
-A FINAL -p tcp -m multiport --dports 22,80 -m state --state NEW,ESTABLISHED -j ACCEPT
COMMIT
# Completed on Wed Dec 30 16:38:52 2020
